[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "mlip-plot"
version = "0.1.0"
description = "Fast MD trajectory analysis with C++ backend and matplotlib plotting"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Osman Mamun", email = "mamun.che06@gmail.com"}
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "click>=8.0",
    "scipy>=1.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
mlip-plot = "mlip_plot.cli:main"

[tool.scikit-build]
wheel.packages = ["src/mlip_plot"]
wheel.expand-macos-universal-tags = true
cmake.minimum-version = "3.15"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_OSX_DEPLOYMENT_TARGET = "10.15"
